# TEST_AI

./: .$diragam.drawio.bkp  .gitignore  Readme.md  buildspec.yml
app/: Dockerfile  README.md  pyproject.toml  tests.py  unit_tests.py
app/baml_src/: classify.baml  clients.baml  common.baml  dynamic_extraction.baml  extraction.baml  types.baml
app/src/: main.py  routes.py  services.py
terraform/: alb.tf  cloudwatch.tf  codebuild.tf  ecr.tf  ecs.tf  github.tf  iam.tf  outputs.tf  providers.tf  readme.md  secrets.tf  terraform.tfvars.txt  variables.tf  vpc.tf
